php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35249 Compile cannot link when libedit is enabled
Submitted: 2005-11-17 02:15 UTC Modified: 2005-11-21 08:32 UTC
From: php-david at tulloh dot id dot au Assigned: sniper (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.1.0RC6 OS: Debian Linux
Private report: No CVE-ID: None
 [2005-11-17 02:15 UTC] php-david at tulloh dot id dot au
Description:
------------
Compile fails with libedit.  I haven't used libedit for a while so I don't know when this problem was introduced.

/bin/sh /home/lod/Downloads/php-5.1.0RC5/libtool --silent --preserve-dup-deps --mode=link gcc -export-dynamic -g -O2     ext/date/php_date.lo [...] -o sapi/cli/php
sapi/cli/php_cli_readline.o(.text+0x8cc): In function `cli_code_completion':
/home/lod/Downloads/php-5.1.0RC5/sapi/cli/php_cli_readline.c:433: undefined reference to `rl_completion_matches'
collect2: ld returned 1 exit status
make: *** [sapi/cli/php] Error 1


Reproduce code:
---------------
reproducable configure line:
./configure \
        '--disable-all' \
        '--disable-cgi' \
        '--enable-cli' \
        '--with-libedit=shared,/usr'

libedit-dev is version 2.9.cvs.20040827-1, the debian stable version.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-11-17 09:24 UTC] sniper@php.net
Fast fix: NEVER EVER compile anything as shared. :)

 [2005-11-17 09:37 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2005-11-18 04:03 UTC] php-david at tulloh dot id dot au
Fails in 5.1.0RC6
Fails in the 5.1 branch of CVS
Fails (in both) when the shared flag is removed.

The error is unchanged.
 [2005-11-18 09:48 UTC] tony2001@php.net
Jani, did you really fix it?
 [2005-11-18 16:07 UTC] sniper@php.net
Fixed the other part of the problem.
 [2005-11-21 08:32 UTC] php-david at tulloh dot id dot au
works in 5.1 cvs, thankyou.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC