MFH: - Fix compile failure when ext/readline is compiled as shared (bug #35249)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@200655 c90b9560-bf6c-de11-be94-00142212c4b1